四六级、首页通知、通知详情、考试安排

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -9,6 +9,39 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    box-sizing: border-box;
-    padding: 24px;
+    user-select: none;
+    display: flex;
+    flex-direction: column;
+}
+
+.function-card-container {
+    width: 76px;
+    height: 100px;
+    display: inline-block;
+    border-radius: 12px;
+    transition: 0.1s;
+    margin-left: 12px;
+    margin-right: 12px;
+    margin-top: 16px;
+    flex-shrink: 0;
+}
+
+.function-card-container:active {
+    opacity: 0.72;
+    background-color: #8882;
+}
+
+
+.msg-card {
+    height: 80px;
+    border-radius: 16px;
+    border: 1px solid #7777;
+    margin-left: 12px;
+    margin-right: 12px;
+    margin-top: 12px;
+    position: relative;
+}
+
+.msg-card:active {
+    background: #aaa2;
 }
