--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -17,12 +17,11 @@
 .function-card-container {
     width: 76px;
     height: 100px;
-    display: inline-block;
     border-radius: 12px;
     transition: 0.1s;
     margin-left: 12px;
     margin-right: 12px;
-    margin-top: 16px;
+    margin-bottom: 16px;
     flex-shrink: 0;
 }
 
